--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "@types/lodash-es": "^4.17.12",
     "date-fns": "^2.30.0",
+    "express": "^5.1.0",
     "framer-motion": "^10.16.4",
     "leaflet": "^1.9.4",
     "lodash-es": "^4.17.21",
