--- a/cloud-bridge/package.json
+++ b/cloud-bridge/package.json
@@ -2,9 +2,9 @@
   "name": "bioshield-iot-bridge",
   "version": "1.0.0",
   "description": "Cloud bridge server connecting ESP32 IoT sensors to BioShield web application",
-  "main": "server.js",
+  "main": "standalone-server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node standalone-server.js",
     "dev": "nodemon server.js",
     "test": "jest",
     "deploy": "npm install && npm start"
@@ -21,7 +21,6 @@
   "author": "BioShield Team",
   "license": "MIT",
   "dependencies": {
-    "@supabase/supabase-js": "^2.38.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
