--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "deploy:preview": "npm run build && npx netlify deploy --dir=dist"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.3",
+    "@capacitor/cli": "^7.4.3",
+    "@capacitor/core": "^7.4.3",
     "@supabase/supabase-js": "^2.57.4",
     "@types/lodash-es": "^4.17.12",
     "date-fns": "^2.30.0",
     "express": "^5.1.0",
+    "firebase": "^12.3.0",
     "framer-motion": "^10.16.4",
     "leaflet": "^1.9.4",
     "lodash-es": "^4.17.21",
@@ -41,6 +45,7 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "vite-plugin-pwa": "^1.0.3"
   }
 }
