--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -13,22 +13,22 @@ jobs:
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       
     - name: Setup Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: '18'
         cache: 'npm'
         
     - name: Install dependencies
-      run: npm ci
+      run: npm install
       
     - name: Build web app
       run: npm run build
       
     - name: Setup Java 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
         java-version: '17'
@@ -36,34 +36,28 @@ jobs:
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
       
+    - name: Accept Android SDK licenses
+      run: yes | sdkmanager --licenses || true
+        
     - name: Install Android SDK components
       run: |
-        sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+        sdkmanager "platform-tools" "platforms;android-34" "build-tools;34.0.0" "cmdline-tools;latest"
+        
+    - name: Make gradlew executable
+      run: chmod +x android/gradlew
         
     - name: Sync Capacitor
       run: |
         npx cap sync android
         
-    - name: Build APK
+    - name: Build Debug APK
       run: |
         cd android
-        ./gradlew assembleDebug
+        ./gradlew assembleDebug --no-daemon --stacktrace
         
-    - name: Upload APK artifact
-      uses: actions/upload-artifact@v3
+    - name: Upload Debug APK
+      uses: actions/upload-artifact@v4
       with:
         name: bioshield-debug-apk
         path: android/app/build/outputs/apk/debug/app-debug.apk
-        retention-days: 30
-        
-    - name: Create Release APK
-      run: |
-        cd android
-        ./gradlew assembleRelease
-        
-    - name: Upload Release APK artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: bioshield-release-apk
-        path: android/app/build/outputs/apk/release/app-release-unsigned.apk
         retention-days: 30
